# OpenCL

./: CMakeLists.txt  buffer_check.c  hellokernel.cl  matrixmultiply.cl  simpleMultiply.cl  simpleMultiply.cpp
